# axyl

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SYNC.md  TODO-CRv2-NETWORKING.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/consensus/consensus-metrics/: Cargo.toml
crates/consensus/consensus-metrics/src/: guards.rs  histogram.rs  lib.rs  metered_channel.rs
crates/consensus/consensus-metrics/src/tests/: metered_channel_tests.rs
crates/consensus/network/: Cargo.toml  README.md
crates/consensus/network/src/: README.md  codec.rs  error.rs  kad.rs  lib.rs  metrics.rs  types.rs
crates/consensus/network/src/consensus/: behaviour.rs  command.rs  constructor.rs  debug.rs  gossip.rs  kad.rs  maintenance.rs  mod.rs  peer_events.rs  reqres.rs  runtime.rs  types.rs
crates/consensus/network/src/peers/: all_peers.rs  banned.rs  behavior.rs  cache.rs  manager.rs  mod.rs  peer.rs  score.rs  status.rs  types.rs
crates/consensus/network/src/tests/: banned_peers.rs  cache_peers.rs  codec_tests.rs  common.rs  network_tests.rs  peer_manager.rs  peers.rs  types.rs
crates/consensus/primary/: Cargo.toml
crates/consensus/primary/src/: certificate_fetcher.rs  certifier.rs  consensus_bus.rs  lib.rs  primary.rs  recent_blocks.rs  recently_executed_blocks.rs  state_handler.rs  vote_failure_tracker.rs
crates/consensus/primary/src/aggregators/: certificates.rs  mod.rs  votes.rs
crates/consensus/primary/src/consensus/: bullshark.rs  leader_schedule.rs  mod.rs  state.rs  utils.rs
crates/consensus/primary/src/error/: cert_manager.rs  gc.rs  mod.rs  network.rs  proposer.rs
crates/consensus/primary/src/network/: handler.rs  message.rs  mod.rs  state.rs
crates/consensus/primary/src/proposer/: header_builder.rs  mod.rs  recovery.rs  round.rs  run_loop.rs  types.rs
crates/consensus/primary/src/state_sync/: cert_collector.rs  cert_manager.rs  cert_validator.rs  gc.rs  header_validator.rs  mod.rs  pending_cert_manager.rs
crates/consensus/primary/src/test_utils/: helpers.rs  mod.rs
crates/consensus/primary/src/tests/: cert_collector_tests.rs  cert_manager_tests.rs  cert_validator_tests.rs  certificate_fetcher_tests.rs  certificate_processing_tests.rs  certificate_tests.rs  certifier_tests.rs  header_validator_tests.rs  network_tests.rs  primary_tests.rs  proposer_tests.rs  synchronizer_tests.rs
crates/consensus/primary/tests/it/: certificate_order_test.rs  main.rs  output_tests.rs  storage_tests.rs
crates/consensus/state-sync/: Cargo.toml  README.md
crates/consensus/state-sync/src/: consensus.rs  epoch.rs  lib.rs  tests.rs
crates/consensus/worker/: Cargo.toml
crates/consensus/worker/src/: batch_fetcher.rs  lib.rs  metrics.rs  quorum_waiter.rs  test_utils.rs  worker.rs
crates/consensus/worker/src/batch-builder/: Cargo.toml  README.md
crates/consensus/worker/src/batch-validator/: Cargo.toml  README.md
crates/consensus/worker/src/network/: error.rs  handler.rs  message.rs  mod.rs
crates/consensus/worker/src/tests/: batch_fetcher.rs  batch_sequence.rs
crates/execution/evm/: Cargo.toml  README.md
crates/execution/evm/benches/: lib.rs
crates/execution/evm/src/: bypass_validator.rs  chainspec.rs  dirs.rs  error.rs  lib.rs  payload.rs  persistence.rs  rpc_server_args.rs  system_calls.rs  test_utils.rs  traits.rs  txn_pool.rs  worker.rs
crates/execution/execution-metrics/: Cargo.toml
crates/execution/execution-metrics/src/: lib.rs
crates/execution/faucet/: Cargo.toml  README.md
crates/execution/faucet/src/: cli_ext.rs  lib.rs  rpc_ext.rs  service.rs
crates/execution/rpc/: Cargo.toml
crates/execution/rpc/src/: error.rs  lib.rs  rpc_ext.rs
crates/infrastructure/config/: Cargo.toml  README.md
crates/infrastructure/config/src/: consensus.rs  genesis.rs  keys.rs  lib.rs  network.rs  node.rs  retry.rs  traits.rs
crates/infrastructure/network-cli/: Cargo.toml  README.md  build.rs
crates/infrastructure/network-cli/src/: cli.rs  lib.rs  node.rs  version.rs
crates/infrastructure/network-types/: Cargo.toml
crates/infrastructure/network-types/src/: lib.rs  local.rs  notify.rs  response.rs
crates/infrastructure/storage/: Cargo.toml
crates/infrastructure/storage/src/: layered_db.rs  lib.rs  mem_db.rs
crates/infrastructure/types/: Cargo.toml
crates/infrastructure/types/src/: aggregator.rs  batch_tracker.rs  bcs_layout.rs  build_metadata.rs  codec.rs  committee.rs  database_traits.rs  error.rs  executed_batch_registry.rs  gas_accumulator.rs  genesis.rs  helpers.rs  lib.rs  network.rs  nonce.rs  notifier.rs  payload.rs  rewards.rs  serde.rs  sync.rs  task_manager.rs
crates/infrastructure/utils/: Cargo.toml
crates/infrastructure/utils/src/: lib.rs  notify_read.rs
crates/middleware/bridge/: Cargo.toml  README.md
crates/middleware/bridge/src/: errors.rs  lib.rs  subscriber.rs
crates/middleware/orchestrator/: Cargo.toml  README.md
crates/middleware/orchestrator/src/: lib.rs
crates/middleware/processor/: Cargo.toml  README.md
crates/middleware/processor/src/: error.rs  gas.rs  lib.rs
crates/middleware/rewards/: Cargo.toml
crates/middleware/rewards/src/: lib.rs
crates/testing/chaos-framework/: Cargo.toml
crates/testing/chaos-framework/src/: cluster.rs  lib.rs  node.rs  rpc.rs
crates/testing/chaos-framework/tests/: chaos_scenarios.rs
crates/testing/e2e-tests/: Cargo.toml
crates/testing/e2e-tests/src/: lib.rs
crates/testing/fuzz-targets/: Cargo.toml
crates/testing/fuzz-targets/fuzz/: .gitignore  Cargo.toml
crates/testing/fuzz-targets/src/: lib.rs
crates/testing/test-utils/: Cargo.toml
crates/testing/test-utils-committee/: Cargo.toml
crates/testing/test-utils-committee/src/: authority.rs  builder.rs  committee.rs  lib.rs  worker.rs
crates/testing/test-utils/src/: consensus.rs  execution.rs  lib.rs  temp_dirs.rs
doc/: README.md  (+5 more)
etc/state-sum/: .gitignore  Cargo.toml  README.md  package.json  usdr-burn.mjs  usdr-mint.mjs
etc/state-sum/src/: main.rs
(+418 files in other folders)
