[package]
name = "consensus-metrics"
version.workspace = true
authors = [
]
license = "BUSL-1.1"
publish = false
edition = "2021"

[dependencies]
axum = { workspace = true, default_features = false, features = ["tokio", "http2"] }
tracing = { workspace = true }
scopeguard = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
rayls-infrastructure-types = { workspace = true }

[lints]
workspace = true
