[package]
name = "rayls-execution-evm"
version.workspace = true
edition = "2021"
license = "BUSL-1.1"
authors = [
]
publish = false

[dependencies]
jsonrpsee = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
rayls-infrastructure-config = { workspace = true }
rayls-infrastructure-types = { workspace = true }
rayls-middleware-rewards = { workspace = true }
rayls-consensus-worker = { workspace = true }
dirs-next = "2.0.0"
parking_lot = { workspace = true }
rayls-execution-metrics = { workspace = true }

rayon = { workspace = true }
crossbeam-channel = { workspace = true }

reth = { workspace = true }
reth-db = { workspace = true }
reth-db-common = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-chainspec = { workspace = true }
reth-chain-state = { workspace = true }
reth-cli-util = { workspace = true }
reth-primitives = { workspace = true }
reth-consensus = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-engine-tree = { workspace = true }
reth-revm = { workspace = true }
reth-evm = { workspace = true }
reth-node-builder = { workspace = true }
reth-provider = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-transaction-pool = { workspace = true }

reth-errors = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-network-peers = { workspace = true }
reth-network-api = { workspace = true }
reth-discv4 = { workspace = true }
reth-eth-wire = { workspace = true }
reth-tracing = { workspace = true }
reth-stages = { workspace = true }
reth-downloaders = { workspace = true }
reth-static-file = { workspace = true }
reth-prune = { workspace = true }
reth-prune-types = { workspace = true }
reth-exex-types = { workspace = true }
reth-stages-api = { workspace = true }
reth-config = { workspace = true }
reth-tasks = { workspace = true }
reth-storage-api = { workspace = true }
reth-trie = { workspace = true }
reth-trie-db = { workspace = true }
reth-tokio-util = { workspace = true }

rand = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
alloy = { workspace = true, features = ["genesis"] }
alloy-evm = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
reth-ethereum-primitives = { workspace = true }
secp256k1 = { workspace = true, optional = true }

[dev-dependencies]
rayls-infrastructure-types = { workspace = true, features = ["test-utils"] }
rayls-execution-evm = { path = ".", features = ["test-utils"] }
secp256k1 = { workspace = true }
criterion = "0.5"

[features]
default = []
test-utils = ["secp256k1"]
archive-replay = []

[[bench]]
name = "lib"
harness = false

[lints]
workspace = true
