[package]
name = "rayls-network-cli"
version.workspace = true
edition = "2021"
license = "BUSL-1.1"
repository = ""
readme = "README.md"
authors = [
]

[dependencies]
alloy = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
const-str = "0.5.6"
fdlimit = { workspace = true }
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "recovery",
] }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
tracing = { workspace = true }
rpassword = { workspace = true }
rayls-infrastructure-types = { workspace = true, features = ["cli"] }
rayls-infrastructure-storage = { workspace = true }
rayls-infrastructure-config = { workspace = true }
rayon = { workspace = true }
dirs-next = { workspace = true }
bs58 = { workspace = true }
serde_yaml = { workspace = true }
rayls-execution-evm = { workspace = true }
rayls-middleware-orchestrator = { workspace = true }
# Legacy-tx signing for the dev dashboard's "send tx" actions (dev-only, gated by the `dev-single-node-setup` feature).
ethereum-tx-sign = { version = "6.1.3", optional = true }

[features]
default = []
# Local single-node development mode: the `dev` subcommand and `node --dev`
# (auto-bootstrap, gasless chain, pre-funded well-known keys, embedded dev
# dashboard). NOT FOR PRODUCTION — excluded from default/release builds; enable
# with `--features dev-single-node-setup`.
dev-single-node-setup = ["dep:ethereum-tx-sign", "rayls-middleware-orchestrator/dev-single-node-setup"]

[dev-dependencies]
rayls-infrastructure-types = { workspace = true, features = ["test-utils"] }
rayls-infrastructure-config = { workspace = true, features = ["test-utils"]}
tempfile = { workspace = true }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }

[lints]
workspace = true
