[package]
name = "rayls-infrastructure-utils"
authors = [
]
license = "BUSL-1.1"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
futures = { workspace = true }

[lints]
workspace = true