[package]
name = "rayls-middleware-bridge"
version.workspace = true
edition = "2021"
license = "BUSL-1.1"
authors = [
]
publish = false

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
rayls-infrastructure-storage = { workspace = true }
rayls-infrastructure-network-types = { workspace = true }
rayls-consensus-state-sync = { workspace = true }
rayls-infrastructure-types = { workspace = true }
rayls-infrastructure-config = { workspace = true }
consensus-metrics.workspace = true
rayls-consensus-primary = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
rayls-testing-test-utils = { workspace = true }
rayls-consensus-primary = { workspace = true, features = ["test-utils"] }
rayls-consensus-network = { workspace = true }
rayls-execution-evm = { workspace = true, features = ["test-utils"] }

[features]
default = []
# Single-node / local dev chain behavior (skip gossip on sole-member committee).
# Must match the feature name used by all crates in the dependency graph.
dev-single-node-setup = []

[lints]
workspace = true
